--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,13 @@
     <string name="welcome_text">
     Welcome to <font color="#FF9C3F">Budget Master!</font>
     </string>
+    <string name="sign_up_text">
+    Sign up to <font color="#FF9C3F">Budget Master!</font>
+    </string>
     <string name="sign_in_new_user_text">
     New to Budget Master? <font color="#FF9C3F">Join us!</font>
+    </string>
+    <string name="sign_up_old_user_text">
+    Already on Budget Master? <font color="#FF9C3F">Sign in!</font>
     </string>
 </resources>
