--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_settings">Settings</string>
     <string name="loading_ellipsis">Loading…</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
     <string name="welcome_text">
     Welcome to <font color="#FF9C3F">Budget Master!</font>
     </string>
